Chage in npy storage

--- a/changingfolders.ipynb
+++ b/changingfolders.ipynb
@@ -50312,6 +50312,96 @@
     "\n",
     "    print(\"\\nDone! All brand folders removed, images flattened, and mapping saved.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2edd7f79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[✓] shoe_features\\Boots\\Ankle.npz : 5855 items\n",
+      "[✓] shoe_features\\Boots\\Knee High.npz : 2202 items\n",
+      "[✓] shoe_features\\Boots\\Mid-Calf.npz : 4726 items\n",
+      "[✓] shoe_features\\Boots\\Over the Knee.npz : 49 items\n",
+      "[✓] shoe_features\\Boots\\Prewalker Boots.npz : 2 items\n",
+      "[✓] shoe_features\\Sandals\\Athletic.npz : 14 items\n",
+      "[✓] shoe_features\\Sandals\\Flat.npz : 5601 items\n",
+      "[✓] shoe_features\\Sandals\\Heel.npz : 126 items\n",
+      "[✓] shoe_features\\Shoes\\Boat Shoes.npz : 629 items\n",
+      "[✓] shoe_features\\Shoes\\Clogs and Mules.npz : 1427 items\n",
+      "[✓] shoe_features\\Shoes\\Crib Shoes.npz : 23 items\n",
+      "[✓] shoe_features\\Shoes\\Firstwalker.npz : 369 items\n",
+      "[✓] shoe_features\\Shoes\\Flats.npz : 3994 items\n",
+      "[✓] shoe_features\\Shoes\\Heels.npz : 5704 items\n",
+      "[✓] shoe_features\\Shoes\\Loafers.npz : 2875 items\n",
+      "[✓] shoe_features\\Shoes\\Oxfords.npz : 2044 items\n",
+      "[✓] shoe_features\\Shoes\\Prewalker.npz : 249 items\n",
+      "[✓] shoe_features\\Shoes\\Sneakers and Athletic Shoes.npz : 12859 items\n",
+      "[✓] shoe_features\\Slippers\\Boot.npz : 14 items\n",
+      "[✓] shoe_features\\Slippers\\Slipper Flats.npz : 1259 items\n",
+      "[✓] shoe_features\\Slippers\\Slipper Heels.npz : 10 items\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "Merge all *.npy feature files that live under\n",
+    "\n",
+    "shoe_features/<category>/<subcategory>/*.npy\n",
+    "\n",
+    "into one file per <subcategory>.  \n",
+    "The merged file holds:\n",
+    "\n",
+    "    • feats : 2-D array of shape (N, D)  \n",
+    "    • names : 1-D array (object / UTF-8) with the original *.npy filenames\n",
+    "\n",
+    "Output format: <subcategory>.npz   (compressed, handy, still a single file)\n",
+    "If you *must* have “.npy” instead, see the comment near the end.\n",
+    "\"\"\"\n",
+    "\n",
+    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "\n",
+    "root = Path(\"shoe_features\")       # ← change if your root lives elsewhere\n",
+    "\n",
+    "for cat_dir in root.iterdir():            # first level = category folders\n",
+    "    if not cat_dir.is_dir():\n",
+    "        continue\n",
+    "\n",
+    "    for sub_dir in cat_dir.iterdir():     # second level = sub-categories\n",
+    "        if not sub_dir.is_dir():\n",
+    "            continue\n",
+    "\n",
+    "        feat_list, name_list = [], []\n",
+    "        for npy_path in sorted(sub_dir.glob(\"*.npy\")):\n",
+    "            arr = np.load(npy_path).squeeze()          # (D,) or (1,D) → (D,)\n",
+    "            feat_list.append(arr)\n",
+    "            name_list.append(npy_path.name)\n",
+    "\n",
+    "        if not feat_list:                # skip empty folders\n",
+    "            continue\n",
+    "\n",
+    "        feats = np.stack(feat_list, axis=0)            # shape (N, D)\n",
+    "        names = np.array(name_list)\n",
+    "\n",
+    "        out_path = sub_dir.with_suffix(\".npz\")         # <subcategory>.npz\n",
+    "        np.savez_compressed(out_path, feats=feats, names=names)\n",
+    "        print(f\"[✓] {out_path.relative_to(root.parent)} : {len(feats)} items\")\n",
+    "\n",
+    "        # ----- OPTIONAL: delete old per-image files to save space -----\n",
+    "        for p in sub_dir.glob(\"*.npy\"):\n",
+    "            p.unlink()\n",
+    "\n",
+    "        # ----- WANT *.npy INSTEAD OF *.npz? -----\n",
+    "        # You can store a dict (pickled) in a single .npy:\n",
+    "        # meta = {\"feats\": feats, \"names\": names}\n",
+    "        # np.save(sub_dir.with_suffix(\".npy\"), meta)\n",
+    "        # but .npz is cleaner, cross-language friendly, and compressed.\n"
+   ]
   }
  ],
  "metadata": {
