Brands, Prices, Retrieval refinement, cross-attention re-ranker

--- a/changingfolders.ipynb
+++ b/changingfolders.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9367753d",
    "metadata": {},
    "outputs": [
@@ -83,8 +83,8 @@
     "Target layout (created by this script)\n",
     "└─ shoe_features_by_subcat/\n",
     "   └─ <Category>/\n",
-    "       └─ <Subcategory>/\n",
-    "           └─ abc.npy\n",
+    "\t   └─ <Subcategory>/\n",
+    "\t\t   └─ abc.npy\n",
     "\"\"\"\n",
     "\n",
     "from pathlib import Path\n",
@@ -98,67 +98,67 @@
     "# ────────────────────────────────────────────────────────────────────────\n",
     "\n",
     "def build_image_index(img_root: Path):\n",
-    "    \"\"\"\n",
-    "    Walk the shoes/ tree and map each image stem (abc) → relative path\n",
-    "    <Category>/<Subcategory>.\n",
-    "    \"\"\"\n",
-    "    index = {}\n",
-    "    dups  = collections.defaultdict(list)\n",
+    "\t\"\"\"\n",
+    "\tWalk the shoes/ tree and map each image stem (abc) → relative path\n",
+    "\t<Category>/<Subcategory>.\n",
+    "\t\"\"\"\n",
+    "\tindex = {}\n",
+    "\tdups  = collections.defaultdict(list)\n",
     "\n",
-    "    for img in img_root.rglob(\"*.jpg\"):\n",
-    "        stem = img.stem.lower()\n",
-    "        try:\n",
-    "            category, subcat = img.relative_to(img_root).parts[:2]\n",
-    "        except ValueError:\n",
-    "            # Not deep enough (shouldn’t happen, but be safe)\n",
-    "            continue\n",
-    "        rel_path = Path(category) / subcat\n",
-    "        if stem in index:\n",
-    "            # Same filename appears in multiple subcats – remember both\n",
-    "            dups[stem].append(rel_path)\n",
-    "        else:\n",
-    "            index[stem] = rel_path\n",
-    "    if dups:\n",
-    "        print(f\"[WARN] {len(dups)} duplicate basenames found; \"\n",
-    "              f\"first occurrence wins.   Examples: {list(dups.items())[:3]}\")\n",
-    "    return index\n",
+    "\tfor img in img_root.rglob(\"*.jpg\"):\n",
+    "\t\tstem = img.stem.lower()\n",
+    "\t\ttry:\n",
+    "\t\t\tcategory, subcat = img.relative_to(img_root).parts[:2]\n",
+    "\t\texcept ValueError:\n",
+    "\t\t\t# Not deep enough (shouldn’t happen, but be safe)\n",
+    "\t\t\tcontinue\n",
+    "\t\trel_path = Path(category) / subcat\n",
+    "\t\tif stem in index:\n",
+    "\t\t\t# Same filename appears in multiple subcats – remember both\n",
+    "\t\t\tdups[stem].append(rel_path)\n",
+    "\t\telse:\n",
+    "\t\t\tindex[stem] = rel_path\n",
+    "\tif dups:\n",
+    "\t\tprint(f\"[WARN] {len(dups)} duplicate basenames found; \"\n",
+    "\t\t\t  f\"first occurrence wins.   Examples: {list(dups.items())[:3]}\")\n",
+    "\treturn index\n",
     "\n",
     "def main():\n",
-    "    img_index = build_image_index(SRC_IMG_ROOT)\n",
+    "\timg_index = build_image_index(SRC_IMG_ROOT)\n",
     "\n",
-    "    total   = 0\n",
-    "    matched = 0\n",
-    "    missing = []\n",
+    "\ttotal   = 0\n",
+    "\tmatched = 0\n",
+    "\tmissing = []\n",
     "\n",
-    "    for npy in SRC_NPY_DIR.glob(\"*.npy\"):\n",
-    "        total += 1\n",
-    "        stem = npy.stem.lower()\n",
-    "        rel  = img_index.get(stem)\n",
-    "        if rel is None:\n",
-    "            missing.append(npy.name)\n",
-    "            continue\n",
+    "\tfor npy in SRC_NPY_DIR.glob(\"*.npy\"):\n",
+    "\t\ttotal += 1\n",
+    "\t\tstem = npy.stem.lower()\n",
+    "\t\trel  = img_index.get(stem)\n",
+    "\t\tif rel is None:\n",
+    "\t\t\tmissing.append(npy.name)\n",
+    "\t\t\tcontinue\n",
     "\n",
-    "        dest_dir = DST_ROOT / rel\n",
-    "        dest_dir.mkdir(parents=True, exist_ok=True)\n",
-    "        shutil.copy2(npy, dest_dir / npy.name)\n",
-    "        matched += 1\n",
+    "\t\tdest_dir = DST_ROOT / rel\n",
+    "\t\tdest_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\t\tshutil.copy2(npy, dest_dir / npy.name)\n",
+    "\t\tmatched += 1\n",
     "\n",
-    "        # lightweight progress indicator\n",
-    "        if matched % 1000 == 0:\n",
-    "            print(f\"  …{matched} files placed\")\n",
+    "\t\t# lightweight progress indicator\n",
+    "\t\tif matched % 1000 == 0:\n",
+    "\t\t\tprint(f\"  …{matched} files placed\")\n",
     "\n",
-    "    print(f\"\\nDone!  Matched {matched}/{total} npys \"\n",
-    "          f\"({len(missing)} unmatched).\")\n",
-    "    if missing:\n",
-    "        print(\"Unmatched examples:\", missing[:10])\n",
+    "\tprint(f\"\\nDone!  Matched {matched}/{total} npys \"\n",
+    "\t\t  f\"({len(missing)} unmatched).\")\n",
+    "\tif missing:\n",
+    "\t\tprint(\"Unmatched examples:\", missing[:10])\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "\tmain()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "95696576",
    "metadata": {},
    "outputs": [
@@ -50246,76 +50246,76 @@
     "from pathlib import Path\n",
     "\n",
     "def flatten_brands(shoes_root):\n",
-    "    \"\"\"\n",
-    "    shoes_root/\n",
-    "      └── <category>/\n",
-    "          └── <subcategory>/\n",
-    "              └── <brand>/\n",
-    "                  └── image.jpg\n",
-    "      \n",
-    "    After running, images live in:\n",
-    "      shoes_root/<category>/<subcategory>/<category>_<subcategory>_image.jpg\n",
-    "    and brand folders are removed.\n",
-    "    \n",
-    "    Returns a dict: { \"category_subcategory_image.jpg\": \"brand\", ... }\n",
-    "    \"\"\"\n",
-    "    shoes_root = Path(shoes_root)\n",
-    "    mapping = {}\n",
+    "\t\"\"\"\n",
+    "\tshoes_root/\n",
+    "\t  └── <category>/\n",
+    "\t\t  └── <subcategory>/\n",
+    "\t\t\t  └── <brand>/\n",
+    "\t\t\t\t  └── image.jpg\n",
+    "\t  \n",
+    "\tAfter running, images live in:\n",
+    "\t  shoes_root/<category>/<subcategory>/<category>_<subcategory>_image.jpg\n",
+    "\tand brand folders are removed.\n",
+    "\t\n",
+    "\tReturns a dict: { \"category_subcategory_image.jpg\": \"brand\", ... }\n",
+    "\t\"\"\"\n",
+    "\tshoes_root = Path(shoes_root)\n",
+    "\tmapping = {}\n",
     "\n",
-    "    # iterate categories\n",
-    "    for cat_dir in shoes_root.iterdir():\n",
-    "        if not cat_dir.is_dir():\n",
-    "            continue\n",
-    "        # iterate subcategories\n",
-    "        for sub_dir in cat_dir.iterdir():\n",
-    "            if not sub_dir.is_dir():\n",
-    "                continue\n",
-    "            # iterate brands\n",
-    "            for brand_dir in sub_dir.iterdir():\n",
-    "                if not brand_dir.is_dir():\n",
-    "                    continue\n",
-    "                brand = brand_dir.name\n",
-    "                # move each image up one level\n",
-    "                for img_path in brand_dir.iterdir():\n",
-    "                    if img_path.suffix.lower() not in {\".jpg\", \".jpeg\", \".png\"}:\n",
-    "                        continue\n",
-    "                    new_json_name = f\"{cat_dir.name}_{sub_dir.name}_{img_path.name}\"\n",
-    "                    new_name = f\"{img_path.name}\"\n",
-    "                    dest_path = sub_dir / new_name\n",
-    "                    # if collision, you can choose to overwrite or skip\n",
-    "                    if dest_path.exists():\n",
-    "                        print(f\"⚠️ {dest_path.name} already exists—skipping\")\n",
-    "                        continue\n",
-    "                    shutil.move(str(img_path), str(dest_path))\n",
-    "                    mapping[new_json_name] = brand\n",
+    "\t# iterate categories\n",
+    "\tfor cat_dir in shoes_root.iterdir():\n",
+    "\t\tif not cat_dir.is_dir():\n",
+    "\t\t\tcontinue\n",
+    "\t\t# iterate subcategories\n",
+    "\t\tfor sub_dir in cat_dir.iterdir():\n",
+    "\t\t\tif not sub_dir.is_dir():\n",
+    "\t\t\t\tcontinue\n",
+    "\t\t\t# iterate brands\n",
+    "\t\t\tfor brand_dir in sub_dir.iterdir():\n",
+    "\t\t\t\tif not brand_dir.is_dir():\n",
+    "\t\t\t\t\tcontinue\n",
+    "\t\t\t\tbrand = brand_dir.name\n",
+    "\t\t\t\t# move each image up one level\n",
+    "\t\t\t\tfor img_path in brand_dir.iterdir():\n",
+    "\t\t\t\t\tif img_path.suffix.lower() not in {\".jpg\", \".jpeg\", \".png\"}:\n",
+    "\t\t\t\t\t\tcontinue\n",
+    "\t\t\t\t\tnew_json_name = f\"{cat_dir.name}_{sub_dir.name}_{img_path.name}\"\n",
+    "\t\t\t\t\tnew_name = f\"{img_path.name}\"\n",
+    "\t\t\t\t\tdest_path = sub_dir / new_name\n",
+    "\t\t\t\t\t# if collision, you can choose to overwrite or skip\n",
+    "\t\t\t\t\tif dest_path.exists():\n",
+    "\t\t\t\t\t\tprint(f\"⚠️ {dest_path.name} already exists—skipping\")\n",
+    "\t\t\t\t\t\tcontinue\n",
+    "\t\t\t\t\tshutil.move(str(img_path), str(dest_path))\n",
+    "\t\t\t\t\tmapping[new_json_name] = brand\n",
     "\n",
-    "                # try to remove empty brand folder\n",
-    "                try:\n",
-    "                    brand_dir.rmdir()\n",
-    "                except OSError:\n",
-    "                    print(f\"⚠️ Could not remove {brand_dir}, it may not be empty\")\n",
+    "\t\t\t\t# try to remove empty brand folder\n",
+    "\t\t\t\ttry:\n",
+    "\t\t\t\t\tbrand_dir.rmdir()\n",
+    "\t\t\t\texcept OSError:\n",
+    "\t\t\t\t\tprint(f\"⚠️ Could not remove {brand_dir}, it may not be empty\")\n",
     "\n",
-    "    return mapping\n",
+    "\treturn mapping\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    shoes_dir = \"shoes\"      # ← change this to your actual path\n",
-    "    brand_map = flatten_brands(shoes_dir)\n",
+    "\tshoes_dir = \"shoes\"      # ← change this to your actual path\n",
+    "\tbrand_map = flatten_brands(shoes_dir)\n",
     "\n",
-    "    # print out the mapping\n",
-    "    print(\"Mapping of new filenames → brand:\")\n",
-    "    for fname, brand in brand_map.items():\n",
-    "        print(f\"  {fname}  :  {brand}\")\n",
+    "\t# print out the mapping\n",
+    "\tprint(\"Mapping of new filenames → brand:\")\n",
+    "\tfor fname, brand in brand_map.items():\n",
+    "\t\tprint(f\"  {fname}  :  {brand}\")\n",
     "\n",
-    "    # optionally save to JSON\n",
-    "    with open(\"brand_mapping.json\", \"w\", encoding=\"utf-8\") as f:\n",
-    "        json.dump(brand_map, f, indent=2, ensure_ascii=False)\n",
+    "\t# optionally save to JSON\n",
+    "\twith open(\"brand_mapping.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "\t\tjson.dump(brand_map, f, indent=2, ensure_ascii=False)\n",
     "\n",
-    "    print(\"\\nDone! All brand folders removed, images flattened, and mapping saved.\")\n"
+    "\tprint(\"\\nDone! All brand folders removed, images flattened, and mapping saved.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2edd7f79",
    "metadata": {},
    "outputs": [
@@ -50356,8 +50356,8 @@
     "into one file per <subcategory>.  \n",
     "The merged file holds:\n",
     "\n",
-    "    • feats : 2-D array of shape (N, D)  \n",
-    "    • names : 1-D array (object / UTF-8) with the original *.npy filenames\n",
+    "\t• feats : 2-D array of shape (N, D)  \n",
+    "\t• names : 1-D array (object / UTF-8) with the original *.npy filenames\n",
     "\n",
     "Output format: <subcategory>.npz   (compressed, handy, still a single file)\n",
     "If you *must* have “.npy” instead, see the comment near the end.\n",
@@ -50369,38 +50369,38 @@
     "root = Path(\"shoe_features\")       # ← change if your root lives elsewhere\n",
     "\n",
     "for cat_dir in root.iterdir():            # first level = category folders\n",
-    "    if not cat_dir.is_dir():\n",
-    "        continue\n",
+    "\tif not cat_dir.is_dir():\n",
+    "\t\tcontinue\n",
     "\n",
-    "    for sub_dir in cat_dir.iterdir():     # second level = sub-categories\n",
-    "        if not sub_dir.is_dir():\n",
-    "            continue\n",
+    "\tfor sub_dir in cat_dir.iterdir():     # second level = sub-categories\n",
+    "\t\tif not sub_dir.is_dir():\n",
+    "\t\t\tcontinue\n",
     "\n",
-    "        feat_list, name_list = [], []\n",
-    "        for npy_path in sorted(sub_dir.glob(\"*.npy\")):\n",
-    "            arr = np.load(npy_path).squeeze()          # (D,) or (1,D) → (D,)\n",
-    "            feat_list.append(arr)\n",
-    "            name_list.append(npy_path.name)\n",
+    "\t\tfeat_list, name_list = [], []\n",
+    "\t\tfor npy_path in sorted(sub_dir.glob(\"*.npy\")):\n",
+    "\t\t\tarr = np.load(npy_path).squeeze()          # (D,) or (1,D) → (D,)\n",
+    "\t\t\tfeat_list.append(arr)\n",
+    "\t\t\tname_list.append(npy_path.name)\n",
     "\n",
-    "        if not feat_list:                # skip empty folders\n",
-    "            continue\n",
+    "\t\tif not feat_list:                # skip empty folders\n",
+    "\t\t\tcontinue\n",
     "\n",
-    "        feats = np.stack(feat_list, axis=0)            # shape (N, D)\n",
-    "        names = np.array(name_list)\n",
+    "\t\tfeats = np.stack(feat_list, axis=0)            # shape (N, D)\n",
+    "\t\tnames = np.array(name_list)\n",
     "\n",
-    "        out_path = sub_dir.with_suffix(\".npz\")         # <subcategory>.npz\n",
-    "        np.savez_compressed(out_path, feats=feats, names=names)\n",
-    "        print(f\"[✓] {out_path.relative_to(root.parent)} : {len(feats)} items\")\n",
+    "\t\tout_path = sub_dir.with_suffix(\".npz\")         # <subcategory>.npz\n",
+    "\t\tnp.savez_compressed(out_path, feats=feats, names=names)\n",
+    "\t\tprint(f\"[✓] {out_path.relative_to(root.parent)} : {len(feats)} items\")\n",
     "\n",
-    "        # ----- OPTIONAL: delete old per-image files to save space -----\n",
-    "        for p in sub_dir.glob(\"*.npy\"):\n",
-    "            p.unlink()\n",
+    "\t\t# ----- OPTIONAL: delete old per-image files to save space -----\n",
+    "\t\tfor p in sub_dir.glob(\"*.npy\"):\n",
+    "\t\t\tp.unlink()\n",
     "\n",
-    "        # ----- WANT *.npy INSTEAD OF *.npz? -----\n",
-    "        # You can store a dict (pickled) in a single .npy:\n",
-    "        # meta = {\"feats\": feats, \"names\": names}\n",
-    "        # np.save(sub_dir.with_suffix(\".npy\"), meta)\n",
-    "        # but .npz is cleaner, cross-language friendly, and compressed.\n"
+    "\t\t# ----- WANT *.npy INSTEAD OF *.npz? -----\n",
+    "\t\t# You can store a dict (pickled) in a single .npy:\n",
+    "\t\t# meta = {\"feats\": feats, \"names\": names}\n",
+    "\t\t# np.save(sub_dir.with_suffix(\".npy\"), meta)\n",
+    "\t\t# but .npz is cleaner, cross-language friendly, and compressed.\n"
    ]
   }
  ],
